# safer-streets-core

./: .gitignore  .pre-commit-config.yaml  .venv  AGENTS.md  LICENCE.md  README.md  app.py  archive.ipynb  area-ranking.ipynb  batch.py  clumpiness.ipynb  duckdb_test.py  gini.ipynb  kde-sampling.ipynb  lorenz-curve.ipynb  mkdocs.yml  models.py  mohler.R  mohler.py  nomisweb.ipynb  nomisweb.py  poisson-gamma.ipynb  population-distribution.ipynb  predictivity.ipynb  pyproject.toml  random.ipynb  requirements.txt  ruff.toml  similarity.ipynb  spatial.py  test_duckdb.py  tradeoff.ipynb  tradeoff2.ipynb  utils.py
.github/workflows/: lint-test.yml
config/: data_sources.json  geodata_sources.json
doc/: Checkpoint202507.md
docs/: index.md
docs/blog/: index.md  similarity.md
docs/blog/posts/: concentration.md  other.md  predictivity.md
scripts/: extract.py
src/safer_streets_core/: __init__.py  api_helpers.py  azure_blob_storage.py  charts.py  database.py  file_storage.py  measures.py  models.py  nomisweb.py  spatial.py  stats.py  test_database.py  transforms.py  utils.py
src/scripts/: app.py  assign_population.py  azure_sync.py  build_db.py  ew_hex200.py  extract.py  ons-boundaries.py  ons_boundaries.py
src/test/: test_api_helpers.py  test_build_db.py  test_charts.py  test_database.py  test_file_storage.py  test_greenspace.py  test_measures.py  test_models.py  test_nomisweb.py  test_spatial.py  test_stats.py  test_transforms.py  test_utils.py
test/: test_utils.py
