[project]
name = "safer-streets-core"
version = "0.1.0"
authors = [
    { name = "Andrew Smith", email = "a.p.smith@leeds.ac.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb",
    "geopandas>=1.1.1",
    "h3pandas>=0.3.0",
    "humanleague>=2.4.1",
    "itrx>=0.1.4",
    "matplotlib>=3.10.6",
    "osmnx>=2.0.5",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scipy>=1.16.1",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
    "types-shapely>=2.1.0.20250809",
    "typer>=0.17.3",
    "azure-storage-blob>=12.26.0",
    "azure-identity>=1.25.0",
    "scikit-learn>=1.7.2",
]

[project.scripts]
assign-population = "scripts.assign_population:main"
extract = "scripts.extract:main"
cloud = "scripts.azure_sync:main"

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.32.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=src/safer_streets_core --cov-report html --cov-fail-under=70"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "SIM", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/test/*.py" = ["D103"]

[tool.mypy]
strict = true
disallow_untyped_defs = true

